[gd_scene load_steps=9 format=3 uid="uid://c333trd3hms6c"]

[ext_resource type="Script" uid="uid://dlah6ycbke5px" path="res://ui/widget/project_list/project_item.gd" id="1_2n2fj"]
[ext_resource type="PackedScene" uid="uid://bld50igxxirh0" path="res://ui/widget/tag_container/tag_container.tscn" id="2_2n2fj"]
[ext_resource type="Texture2D" uid="uid://b42tvva7hjnhk" path="res://addons/Fantasy UI Borders/PNG/Default/Divider Fade/divider-fade-002.png" id="2_yinwk"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ay6m6"]
size = Vector2(460, 215)

[sub_resource type="Animation" id="Animation_yinwk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_p58gl"]
resource_name = "fade_ind"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_syuwj"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_syuwj"]
_data = {
&"RESET": SubResource("Animation_yinwk"),
&"fade_in": SubResource("Animation_p58gl"),
&"fade_out": SubResource("Animation_syuwj")
}

[node name="ProjectItem" type="MarginContainer"]
custom_minimum_size = Vector2(500, 500)
offset_right = 370.0
offset_bottom = 320.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"HiddenButton"
script = ExtResource("1_2n2fj")

[node name="PanelContainer" type="PanelContainer" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(350, 200)
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Image" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
texture_filter = 2
custom_minimum_size = Vector2(460, 215)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_ay6m6")
expand_mode = 1

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Project name here"
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
texture = ExtResource("2_yinwk")
expand_mode = 1
flip_h = true

[node name="Role" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6431373, 0.23137255, 1)
theme_override_font_sizes/font_size = 12
text = "Project name here"
autowrap_mode = 2

[node name="TagContainer" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_2n2fj")]
layout_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 2
theme_type_variation = &"HiddenButton"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_syuwj")
}
